# prts-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  TEST_TOOLING.md  docker-compose.override.example.yml  glama.json  local_repo.example.jsonc  pyproject.toml
.github/workflows/: cd-ts.yml  cd.yml  ci.yml
data/gamedata/: cache_meta.json
docs/: deployment.md  migration-0.x-to-1.0.md
python/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
python/docs/: deployment.md
python/scripts/: check_package_data.py  fetch_gamedata.py  package_operator_data.py
python/src/prts_mcp/: config.py  server.py
python/src/prts_mcp/api/: prts_wiki.py
python/src/prts_mcp/data/: datasets.py  operator.py  search.py  stores.py  story.py  sync.py
python/src/prts_mcp/utils/: sanitizer.py
python/tests/: conftest.py  fixtures.py  test_config.py  test_dataset_specs.py  test_operator_data.py  test_search.py  test_server_startup_sync.py  test_stores.py  test_story.py  test_story_reader_store.py  test_sync_release.py  test_tool_surface.py
scripts/: fetch_gamedata.py  package_operator_data.py  run_prts_mcp.sh
src/prts_mcp/: config.py  server.py
src/prts_mcp/data/: sync.py  (+1 more)
ts/: CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json
ts/src/: config.ts  server.ts
ts/tests/: datasets.test.ts  operator.test.ts  search.test.ts  serverStartup.test.ts  stores.test.ts  story.test.ts  sync.test.ts  toolSurface.test.ts
(+14 files in other folders)
